# ml-datasets

./: .gitignore  Cargo.toml
src/: lib.rs  utils.rs
src/sets/: base.rs  cifar.rs  mnist.rs  mod.rs
